@@ -12,7 +12,13 @@ dependencies {
 
     // SQL Related Dependencies
     implementation 'com.zaxxer:HikariCP:6.0.0'
-    // Databases
+
+    // Flat-file JDBC
+    implementation 'org.xerial:sqlite-jdbc:3.46.1.3'
+    implementation 'com.h2database:h2:2.3.232'
+
+    // Remote JDBC
+    implementation 'com.mysql:mysql-connector-j:9.0.0'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
     implementation 'org.postgresql:postgresql:42.7.4'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.5.0.24.07'
@@ -35,8 +41,4 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
     implementation 'org.jetbrains:annotations:25.0.0'
     annotationProcessor 'org.jetbrains:annotations:25.0.0'
-}
-
-compileJava {
-    options.compilerArgs += ["--enable-preview"]
 }
